fixed layout issues

--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ body{
     width: 100vw;
     display: grid;
     grid-template-columns: 60px 1fr 1px;
-    grid-template-rows: 60px 1.1fr 1fr;
+    grid-template-rows: 60px 80% 75%;
     grid-column-gap: 50px; 
     overflow-x: hidden;
 
@@ -46,6 +46,7 @@ header{
     grid-area: 2 / 2 / 3 / 3;
     margin-top: 20px;
     background-color: var(--element-bg);
+    border-radius: 20px;
 }
 
 .cards-section{
@@ -72,7 +73,7 @@ header{
 .card {
     background-color: var(--element-bg);
     width: 320px;
-    height: 450px;
+    height: 420px;
     border-radius: 20px;
 }
 
